button nowrap fix

--- a/src/components/ConsentBanner/ConsentBanner.module.css
+++ b/src/components/ConsentBanner/ConsentBanner.module.css
@@ -57,12 +57,14 @@
   font-weight: 300;
   padding: 8px 32px;
   margin: 0;
+  white-space: nowrap;
   border-radius: 2px;
   transition: all 0.3s ease;
   border: 2px solid var(--rcm-primary);
   background-color: var(--rcm-white);
   color: var(--rcm-primary);
   cursor: pointer;
+
 }
 
 .banner .content .secondary:hover {
@@ -77,6 +79,7 @@
   line-height: 24px;
   font-weight: 300;
   margin: 0;
+  white-space: nowrap;
   padding: 8px 32px;
   border-radius: 2px;
   transition: all 0.3s ease;
